fix(심플타이머): 기존 심플 타이머 조회 API 를 테이블 컬럼 삭제 이슈에 따라 수정 및 레포지토리 메소드 수정. (#216)